prevent overflow scrolling on mobile container

--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -6,7 +6,7 @@
   overflow-x: hidden;
 
   @media only screen and (max-width: 1023px) {
-    height: 92vh;
+    height: 89vh;
     padding-bottom: 1.25rem;
   }
 }
